--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="lt">
 
 <head>
-  <meta charset="utf-8 with bom">
+  <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Mano CV</title>
   <meta name="description" content="Eimantas Bimba CV puslapis">
@@ -474,6 +474,7 @@
                   <li>Dirbu komandoje</li>
                 </ul>
               </div>
+            </div>
 
             <!-- Education Section -->
             <div class="resume-section" data-aos="fade-up" data-aos-delay="100">
@@ -651,8 +652,8 @@
             <div class="col-lg-8 col-md-12">
               <div class="service-intro">
                 <h2 class="service-heading">
-                  <div>Innovative business</div>
-                  <div><span>performance solutions</span></div>
+                  <span>Innovative business</span><br>
+                  <span>performance solutions</span>
                 </h2>
               </div>
             </div>
