--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="hero-visual">
                 <div class="profile-container">
                   <div class="profile-background"></div>
-                  <img src="assets/img/profile/profile-2.webp" alt="Alexander Chen" class="profile-image">
+                  <img src="assets/img/code2.jpg" alt="Alexander Chen" class="profile-image">
                 </div>
               </div>
             </div>
@@ -144,7 +144,7 @@
             <div class="profile-card">
               <div class="profile-header">
                 <div class="profile-image">
-                  <img src="assets/img/profile/profile-square-3.webp" alt="Profile Image" class="img-fluid">
+                  <img src="assets/img/7200.webp" alt="Profile Image" class="img-fluid">
                 </div>
                 <div class="profile-badge">
                   <i class="bi bi-check-circle-fill"></i>
@@ -400,7 +400,7 @@
           <div class="col-lg-4">
             <div class="resume-side" data-aos="fade-right" data-aos-delay="100">
               <div class="profile-img mb-4">
-                <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
+                <img src="assets/img/computer-programming.webp" alt="Profile" class="img-fluid rounded">
               </div>
 
               <h3>Professional Summary</h3>
@@ -580,7 +580,7 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-nature">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-portrait-4.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/code4.jpg" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Nature</span>
@@ -596,7 +596,7 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/code5.jpg" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Photography</span>
@@ -612,7 +612,7 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/code6.jpg" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Web Design</span>
@@ -690,6 +690,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -708,6 +709,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -726,6 +728,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -744,6 +747,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -762,6 +766,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -782,9 +787,51 @@
           </div>
         </div>
 
+        <!--  Media Section -->
+        <div class="container mt-5" data-aos="fade-up" data-aos-delay="400">
+          <h3 class="text-center mb-4">Mūsų medijos įrašai</h3>
+
+          <!-- a) Local video -->
+          <div class="media-item mb-4 text-center">
+            <h4>Demonstracinis vaizdo įrašas</h4>
+            <video controls width="640" height="360">
+              <source src="assets/media/7534244-hd_1920_1080_25fps.mp4" type="video/mp4">
+              Jūsų naršyklė nepalaiko vaizdo įrašų.
+            </video>
+            <p class="small text-muted">Šaltinis: Pexels</p>
+          </div>
+
+          <!-- b) YouTube video -->
+          <div class="media-item mb-4 text-center">
+            <h4>YouTube įrašas</h4>
+            <iframe
+              width="640"
+              height="360"
+              src="https://www.youtube.com/embed/BoUVIhtqjAw"
+              title="YouTube video player"
+              style="border: none;"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+            <p class="small text-muted">Šaltinis: YouTube</p>
+          </div>
+
+          <!-- c) Audio file -->
+          <div class="media-item mb-4 text-center">
+            <h4>Garso įrašas</h4>
+            <audio controls>
+              <source src="assets/media/quartz-clock-ticking-one-minute-253102.mp3" type="audio/mpeg">
+              Jūsų naršyklė nepalaiko garso įrašų.
+            </audio>
+            <p class="small text-muted">Šaltinis: Pixabay</p>
+          </div>
+        </div>
+        <!-- /Media Section -->
+
       </div>
 
     </section><!-- /Services Section -->
+
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
@@ -807,7 +854,7 @@
               <p>Implementing innovative strategies has revolutionized our approach to market challenges and competitive positioning.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-f-7.webp" alt="Client">
+                  <img src="assets/img/7200.webp" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Rachel Bennett</h3>
@@ -825,7 +872,7 @@
               <p>Exceptional service delivery and innovative solutions have transformed our business operations, leading to remarkable growth and enhanced customer satisfaction across all touchpoints.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-m-7.webp" alt="Client">
+                  <img src="assets/img/code4.jpg" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Daniel Morgan</h3>
@@ -843,7 +890,7 @@
               <p>Strategic partnership has enabled seamless digital transformation and operational excellence.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-f-8.webp" alt="Client">
+                  <img src="assets/img/code2.jpg" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Emma Thompson</h3>
@@ -861,7 +908,7 @@
               <p>Professional expertise and dedication have significantly improved our project delivery timelines and quality metrics.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-m-8.webp" alt="Client">
+                  <img src="assets/img/code5.jpg" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Christopher Lee</h3>
@@ -879,7 +926,7 @@
               <p>Collaborative approach and industry expertise have revolutionized our product development cycle, resulting in faster time-to-market and increased customer engagement levels.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-f-9.webp" alt="Client">
+                  <img src="assets/img/code.jpg" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Olivia Carter</h3>
@@ -897,7 +944,7 @@
               <p>Innovative approach to user experience design has significantly enhanced our platform's engagement metrics and customer retention rates.</p>
               <div class="client-info">
                 <div class="client-image">
-                  <img src="assets/img/person/person-m-13.webp" alt="Client">
+                  <img src="assets/img/computer-programming.webp" alt="Client">
                 </div>
                 <div class="client-details">
                   <h3>Nathan Brooks</h3>
