--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  <!-- CSS Files -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: SnapFolio
@@ -644,6 +645,40 @@
         <h2>Services</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
+
+      <h2>Paslaugos</h2>
+  <table class="services-table">
+    <thead>
+      <tr>
+        <th>Paslauga</th>
+        <th>Aprašymas</th>
+        <th>Kaina</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Tinklalapių programavimas</td>
+        <td>Tik asmeninių svetainių dizaino kūrimas</td>
+        <td>100 Eur</td>
+      </tr>
+      <tr>
+        <td>SEO optimizacija</td>
+        <td>Puslapio matomumo paieškos sistemose didinimas</td>
+        <td>150 Eur</td>
+      </tr>
+      <tr>
+        <td>Grafikos dizainas</td>
+        <td>Logo ir vizitinės kortelės kūrimas</td>
+        <td>80 Eur</td>
+      </tr>
+      <tr>
+        <td>Socialinių tinklų valdymas</td>
+        <td>Postų kūrimas ir publikavimas</td>
+        <td>120 Eur</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
