--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
     <!-- About Section -->
     <section id="about" class="about section">
 
+      <div class="shape circle"></div>
+      <div class="shape triangle"></div>
+      <div class="shape square"></div>
+
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row">
@@ -647,38 +651,38 @@
       </div><!-- End Section Title -->
 
       <h2>Paslaugos</h2>
-  <table class="services-table">
-    <thead>
-      <tr>
-        <th>Paslauga</th>
-        <th>Aprašymas</th>
-        <th>Kaina</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Tinklalapių programavimas</td>
-        <td>Tik asmeninių svetainių dizaino kūrimas</td>
-        <td>100 Eur</td>
-      </tr>
-      <tr>
-        <td>SEO optimizacija</td>
-        <td>Puslapio matomumo paieškos sistemose didinimas</td>
-        <td>150 Eur</td>
-      </tr>
-      <tr>
-        <td>Grafikos dizainas</td>
-        <td>Logo ir vizitinės kortelės kūrimas</td>
-        <td>80 Eur</td>
-      </tr>
-      <tr>
-        <td>Socialinių tinklų valdymas</td>
-        <td>Postų kūrimas ir publikavimas</td>
-        <td>120 Eur</td>
-      </tr>
-    </tbody>
-  </table>
-</section>
+      <table class="services-table">
+        <thead>
+          <tr>
+            <th>Paslauga</th>
+            <th>Aprašymas</th>
+            <th>Kaina</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tinklalapių programavimas</td>
+            <td>Tik asmeninių svetainių dizaino kūrimas</td>
+            <td>100 Eur</td>
+          </tr>
+          <tr>
+            <td>SEO optimizacija</td>
+            <td>Puslapio matomumo paieškos sistemose didinimas</td>
+            <td>150 Eur</td>
+          </tr>
+          <tr>
+            <td>Grafikos dizainas</td>
+            <td>Logo ir vizitinės kortelės kūrimas</td>
+            <td>80 Eur</td>
+          </tr>
+          <tr>
+            <td>Socialinių tinklų valdymas</td>
+            <td>Postų kūrimas ir publikavimas</td>
+            <td>120 Eur</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -865,7 +869,7 @@
 
       </div>
 
-    </section><!-- /Services Section -->
+
 
 
     <!-- Testimonials Section -->
