--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 
